--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,16 +8,29 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-  background-color: black;
-  color: #fff;
 }
 
 a {
-  color: inherit;
   text-decoration: none;
+  color: inherit;
 }
-.container{
-  max-width: 1300px;
+
+.theme{
+  transition: 1s all ease;
+}
+
+.light {
+  background-color: white;
+  color: #111;
+}
+
+.dark {
+  background-color: #111;
+  color: #bbb;
+}
+
+.container {
+  max-width: 1366px;
   min-height: 100vh;
   margin: 0 auto;
   padding: 0 60px;
